# tinkoff2022

./: __main__.py
1/: README.md  __main__.py  board.py  cmdline.py  color.py  command.py  curses_adapter.py  game.py  hello.py  pyproject.toml  ship.py  status.py  utils.py
weather/: pyproject.toml
weather/weather/: __main__.py  parse_page.py
