[tool.poetry]
name = "ships"
version = "1.0.0"
description = "Education project for tinkoff 2022"
authors = ["nvxden <clever411@yandex.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
