[tool.poetry]
name = "weather"
version = "0.1.0"
description = ""
authors = ["nvxden <clever411@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.4.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
